--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore notebooks I just want to use for scratch files
+testing.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
